renamed variants in buttonIcon, fixed vertical alignment in tables

--- a/src/ButtonIcon/style.css
+++ b/src/ButtonIcon/style.css
@@ -47,6 +47,10 @@
         padding: var(--size-3);
     }
 
+    &.is-secondary {
+        --color: var(--gray-light);
+    }
+
     &.is-destructive {
         --color: var(--error);
         --shadow-focus: var(--error-focus);
